tests/agl/rejections/parse/extern_with_body.agl
extern def f(x: int) -> int = x
